# claude-email

./: .coveragerc  .env.example  .env.test.example  .gitattributes  .gitignore  .mcp-test.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  chat_server.py  claude-chat-test.service  claude-chat.service  claude-email.service  inspiration.md  install.sh  llms.txt  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/: pull_request_template.md
chat/: dashboard.py  dashboard_css.py  dashboard_css_graph.py  dashboard_css_shell.py  dashboard_flow_css.py  dashboard_flow_svg.py  dashboard_glossary.py  dashboard_glossary_a.py  dashboard_glossary_b.py  dashboard_glossary_css.py  dashboard_js.py  dashboard_js_graph.py  dashboard_js_stream.py  dashboard_page.py  dispatch.py  project_mutations.py  project_tool_defs.py  project_tools.py  server.py  tool_definitions.py  tools.py
docs/: claude-chat-brainstorm.md  dashboard-event-sourcing-sse.md  e2e-test-2026-04-18.md  mobile-app-plan.md
scripts/: auto-install-chat-mcp.sh  chat-agent-instruction.txt  chat-drain-inbox.py  chat-register-self.py  chat-rejoin-as.py  chat-session-start-hook.sh  check-line-limit.sh  install-chat-mcp.py  restart-services.sh  setup-repo.sh  test-wake-smoke.sh
src/: agent_bootstrap.py  agent_name.py  agent_registry.py  chat_db.py  chat_errors.py  chat_handlers.py  chat_pid_reclaim.py  chat_relay.py  chat_router.py  chat_schema.py  config.py  config_validators.py  dashboard_queries.py  dispatch.py  (+37 more)
(+88 files in other folders)
