[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-email"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
    "python-gnupg>=0.5.6",
    "mcp>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
